<resources>
    <string name="app_name">i_am_open</string>
    <string name="company_name">Anorgeous</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="view_all">View all</string>
    <string name="product_name">Product Name</string>
    <string name="product_description">
        Product Description goes here. It will be populated from the database in the future
    </string>
    <string name="companies">COMPANIES</string>
    <string name="recently_launched">RECENTLY LAUNCHED</string>


    <string name="data_dog_title">
    <b>What Are Logs In Datadog</b>
</string>

    <string name="data_dog_details">
    <b>GENERAL OVERVIEW</b>\n
    Some additional short product description goes here.\n    More details on product page.Some additional short product\n    description goes here. More details on product page.
</string>
    <string name="data_dog_dis">
    <b>HOW TO FILTER LOGS?</b>\n
    Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do \n    eiusmod tempor incididunt ut labore et dolore magna aliqua. \n    Ut enim ad minim veniam, quis nostrud exercitation ullamco \n    laboris nisi ut aliquip ex ea commodo consequat.

   Duis aute irure dolor in reprehenderit in voluptate velit esse \n   cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat \n   cupidatat non proident, sunt in culpa qui officia deserunt mollit \n   anim id est laborum.
</string>
    <string name="emptyLikedProducts">Your liked products will appear here.</string>
    <string name="demo_desc">Demo</string>
    <string name="company_1_name">Company 1</string>
    <string name="like_button_desc">Like Product</string>


</resources>